# Paddel-OCR-C-

./: .gitattributes  README.md
projects/cpp/PaddleOCR/: .gitmodules
projects/cpp/PaddleOCR/deploy/cpp_infer/: CMakeLists.txt
projects/cpp/PaddleOCR/deploy/cpp_infer/include/: ocr_rec.h
projects/cpp/PaddleOCR/deploy/cpp_infer/include/tools/: BoundedThreadSafeQueue.hpp  Debug.hpp  ScopedTimer.hpp
projects/cpp/PaddleOCR/deploy/cpp_infer/models/en_PP-OCRv3_rec_infer/: label_list.txt
projects/cpp/PaddleOCR/deploy/cpp_infer/src/: main.cpp  ocr_rec.cpp
projects/cpp/PaddleOCR/deploy/cpp_infer/tools/: config.txt
projects/cpp/paddle_inference/: CMakeCache.txt  version.txt
projects/cpp/paddle_inference/paddle/include/: paddle_pass_builder.h
projects/cpp/paddle_inference/paddle/include/internal/: framework.pb.h
projects/cpp/paddle_inference/paddle/include/paddle/: extension.h
projects/cpp/paddle_inference/paddle/include/paddle/phi/api/include/: api.h  fused_api.h
projects/cpp/paddle_inference/paddle/include/paddle/phi/common/: memory_utils.h  place.h
projects/cpp/paddle_inference/paddle/include/paddle/phi/core/: enforce.h  visit_type.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/core/: attribute.h  attribute_base.h  block.h  block_argument.h  builder.h  builtin_attribute.h  builtin_attribute_storage.h  builtin_dialect.h  builtin_op.h  builtin_type.h  builtin_type_interfaces.h  builtin_type_storage.h  dialect.h  interface_support.h  interface_value.h  ir_context.h  ir_mapping.h  ir_printer.h  op_base.h  op_info.h  op_operand.h  op_result.h  op_trait.h  operation.h  operation_utils.h  parameter.h  program.h  region.h  storage_manager.h  storage_manager_support.h  type.h  type_id.h  utils.h  value.h  visitors.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/dialect/control_flow/ir/: cf_dialect.h  cf_interface.h  cf_op.h  cf_type.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/dialect/shape/ir/: shape_attribute.h  shape_attribute_storage.h  shape_op.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/dialect/shape/utils/: constraints_manager.h  dim_expr.h  dim_expr_builder.h  dim_expr_util.h  original_attributes_filter.h  shape_analysis.h  shape_or_data_expr.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/drr/: drr_pattern_base.h  drr_pattern_context.h  drr_rewrite_pattern.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/pass/: analysis_manager.h  pass.h  pass_instrumentation.h  pass_manager.h  pass_registry.h  utils.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/pattern_rewrite/: pattern_match.h  pattern_rewrite_driver.h
projects/cpp/paddle_inference/paddle/include/paddle/pir/utils/: general_functions.h
projects/cpp/paddle_inference/paddle/lib/: common.exp  common.lib  libpaddle_inference.lib  paddle_inference.exp  paddle_inference.lib
